# AI-driven-idea

./: .gitignore  .markdown-preview-enhanced.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VSCode-Mermaid配置指南.md  navigator.db  pyproject.toml  项目导航.md
.cursor/rules/: projectrules.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.trae/rules/: project_rules.md  project_rules_v2.md
agentic-ai-sales-breakthrough/: README.md  idea-analysis.md
ai-agents-analytics-workflows/: README.md
ai-data-catalog-agent/: idea-analysis.md
ai-decision-framework/: Makefile  README.md  hello.py  index.html  requirements.txt
ai-decision-framework/docs/: case-studies.md
ai-decision-framework/examples/: agent-example.md
ai-decision-framework/tests/: __init__.py
ai-ethics-compliance-toolkit/: README.md  idea-analysis.md
ai-influencer-analysis/: idea-analysis.md
ai-talent-pool-impact-analysis/: idea-analysis.md
clinical-data-transfer-specs/: README.md
data-platform-decision-toolkit/: README.md
docs/: 版权声明修正报告.md  项目结构图.md
frontend/: index.html  script.js  style.css
ideaed-projects/ai-advertising-transformation/: README.md  analysis.md
ideaed-projects/ai-agents-analytics-workflows/: idea-analysis.md
ideaed-projects/ai-data-catalog-agent/: README.md
ideaed-projects/ai-data-storage-strategy-toolkit/: README.md  idea-analysis.md
ideaed-projects/ai-decision-framework/: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.py
ideaed-projects/ai-decision-framework/docs/: decision-framework.md
ideaed-projects/ai-decision-framework/examples/: hybrid-example.md  workflow-example.md
ideaed-projects/ai-decision-framework/tests/: test_decision_engine.py
ideaed-projects/ai-erp-consulting-transformation/: README.md  idea-analysis.md
ideaed-projects/ai-humanizing-professional-networking/: README.md  idea-analysis.md
ideaed-projects/ai-influencer-analysis/: README.md
ideaed-projects/ai-liability-insurance-analysis/: README.md  idea-analysis.md
ideaed-projects/ai-national-security-toolkit/: README.md  idea-analysis.md
ideaed-projects/ai-news-media-renaissance/: README.md  idea-analysis.md
ideaed-projects/ai-project-failure-analysis-toolkit/: README.md  idea-analysis.md
ideaed-projects/ai-talent-pool-impact-analysis/: README.md
ideaed-projects/ai-transparency-analysis/: README.md  idea-analysis.md
ideaed-projects/ai-trust-uncertainty-quantification/: README.md  idea-analysis.md
ideaed-projects/ai-workforce-transformation-analysis/: README.md  idea-analysis.md
ideaed-projects/chempass-ai-molecular-design-toolkit/: README.md  idea-analysis.md
ideaed-projects/civil-servant-ai-training-system/: README.md  business-opportunity-analysis.md
ideaed-projects/data-moat-analysis/: README.md  idea-analysis.md
ideaed-projects/interactive-data-dashboard/: .env.dev  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  app.py  docker-compose.dev.yml  pyproject.toml  requirements-dev.txt
ideaed-projects/interactive-data-dashboard/src/interactive_data_dashboard/: __init__.py  chart_generator.py  config.py  main.py  sample_data.py
ideaed-projects/interactive-data-dashboard/tests/: __init__.py
ideaed-projects/llm-instruction-adherence-toolkit/: README.md
ideaed-projects/python-automation-toolkit/: README.md  idea-analysis.md  python-automation-projects-analysis.md
ideaed-projects/scientific-paper-summarizer/: README.md  idea-analysis.md
ideaed-projects/uk-civil-service-ai-training-analysis/: README.md  idea-analysis.md
interactive-data-dashboard/: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
interactive-data-dashboard/src/interactive_data_dashboard/: data_processor.py  utils.py
interactive-data-dashboard/tests/: __init__.py  test_main.py
llm-instruction-adherence-toolkit/: idea-analysis.md
mcp_tool/: LICENSE  MANIFEST.in  README.md  __init__.py  manual_test.py  mcp_config.json  mcp_server.py  pyproject.toml  setup.py  simple_test.py  test_uvx.py
mcp_tool/project_navigator_mcp/: __init__.py  __main__.py  mcp_server.py  mcp_server_fastmcp.py
n8n-data-quality-analyzer/: README.md  idea-analysis.md
navigator/: README.md  add_source_url_migration.py  migration.py  navigator.db  pyproject.toml
navigator/app/: cli.py  crud.py  database.py  main.py  models.py  schemas.py
regularization-deep-dive-analysis/: README.md  idea-analysis.md
